unpackaged/main/default/objects/ETT_Goods_Issue_Note__c/ETT_Goods_Issue_Note__c.object-meta.xml
<CustomObject>
    <label>Goods Issue Note</label>
    <nameField>
        <displayFormat>GIN-{0000}</displayFormat>
        <label>GIN No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods Issue Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>