unpackaged/main/default/objects/ETT_Goods_Issue_Note__c/fields/ETT_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>ETT_Unit_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>