unpackaged/main/default/objects/ETT_Goods_Issue_Note__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>ETT_Job_Card__c</referenceTo>
    <relationshipLabel>Goods Issue Notes</relationshipLabel>
    <relationshipName>Goods_Issue_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>