unpackaged/main/default/objects/ETT_Goods_Issue_Note__c/fields/Journal_Voucher_No__c.field-meta.xml
<CustomField>
    <fullName>Journal_Voucher_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journal Voucher No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>